# marketstack-rs

./: Cargo.toml
src/: client_sync.rs  eod_data.rs  lib.rs
