[package]
name = "marketstack-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.19", features = ["derive"] }
derive_builder = "0.12.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
time = { version = "0.3.23", features = ["formatting", "serde"] }
